--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,9 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
-  <!-- <meta http-equiv="Permissions-Policy" content="interest-cohort=()"> -->
-  <!-- <base href="/food-groups-site/"> -->
+  <meta name="description"
+    content="This project represents variety of food groups and calculate for you the amount of portions for each category by using React JS." />
+  <meta name="author" content="Shai Geffen" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>Food Groups App</title>
+  <title>Food Groups</title>
 </head>
 
 <body>
