Modify meta tags

--- a/public/index.html
+++ b/public/index.html
@@ -7,16 +7,26 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="This project represents variety of food groups and calculate for you the amount of portions for each category by using React JS."
+      content="האתר מציג מגוון רחב של קבוצות מזון ומאפשר לך לחשב את כמות המנות לכל קטגוריה."
+    />
+    <meta
+      name="description"
+      lang="en"
+      content="This website shows variety of food groups and calculate for you the amount of portions for each category."
     />
     <meta
       name="keywords"
-      content="food groups, portion calculation, nutrition app, health, diet, meal planning, food categories"
+      content="קבוצות מזון, תחליפים, חישוב מנות, מזון בריא, בריאות"
+    />
+    <meta
+      name="keywords"
+      lang="en"
+      content="food groups, portion calculation, nutrition app, health, meal planning, food categories"
     />
     <meta name="author" content="Shai Geffen" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Food Groups</title>
+    <title>חישוב מנות מזון</title>
   </head>
   <body>
     <div id="root"></div>
